Apply some fixes for review comments on button position and icon visibility

--- a/src/app/components/layout/AspectRatio.module.css
+++ b/src/app/components/layout/AspectRatio.module.css
@@ -58,13 +58,16 @@
   &.contentWarning {
     background-color: var(--textPrimary);
 
-    .visibilityIcon {
+    .visibilityIcon.warningIcon {
       display: block;
     }
   }
 }
 
 .buttonsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   padding: 8px 8px 0 0;
   position: absolute;
   right: 0;
